# fastapi-polls

./: .gitignore  alembic.ini  main.py  pyproject.toml
alembic/versions/: 0e91ebe5f215_create_polls_table.py  af56144aff9b_create_user_table.py
