[tool.poetry]
name = "fastapi-polls"
version = "0.1.0"
description = ""
authors = ["martin de gesus <martindg_72@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
SQLAlchemy = "^1.4.25"
databases = "^0.5.3"
alembic = "^1.7.4"
psycopg2 = "^2.9.1"
psycopg2-binary = "^2.9.1"

[tool.poetry.dev-dependencies]
uvicorn = "^0.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
